Fixing Animation Overflow

--- a/style.css
+++ b/style.css
@@ -131,16 +131,16 @@ a {
         transform: translate(0, 0);
     }
     25% {
-        transform: translate(100%, 100%);
+        transform: translate(10%, 10%);
     }
     50% {
-        transform: translate(-50%, 75%);
+        transform: translate(-20%, 35%);
     }
     75% {
-        transform: translate(70%, 45%);
+        transform: translate(10%, 25%);
     }
     100% {
-        transform: translate(0%, 0);
+        transform: translate(0, 0);
     }
 }
 
@@ -149,10 +149,10 @@ a {
         transform: translate(0, 0);
     }
     25% {
-        transform: translate(50%, 70%);
+        transform: translate(-50%, 70%);
     }
     50% {
-        transform: translate(65%, 25%);
+        transform: translate(-65%, 25%);
     }
     75% {
         transform: translate(-30%, 80%);
@@ -185,13 +185,13 @@ a {
         transform: translate(0, 0);
     }
     25% {
-        transform: translate(-30%, 80%);
+        transform: translate(-45%, 10%);
     }
     50% {
-        transform: translate(80%, -50%);
+        transform: translate(-30%, -50%);
     }
     75% {
-        transform: translate(-20%, 80%);
+        transform: translate(-25%, 5%);
     }
     100% {
         transform: translate(0, 0);
@@ -280,7 +280,7 @@ a {
     background-color: #00c700;
     position: absolute;
     bottom: 350px;
-    left: 150px;
+    left: 100px;
     animation: move-four 10s ease infinite;
 }
 
@@ -341,6 +341,14 @@ footer {
 
     .link-text {
         display: none;
+    }
+
+    #faq-container {
+        width: 100%;
+    }
+
+    #about-container {
+        width: 100%;
     }
 }
 
